--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "commit": "git-cz",
     "prepare": "husky",
     "commitlint": "commitlint --edit"
   },
@@ -13,6 +14,7 @@
   "devDependencies": {
     "@commitlint/cli": "19.6.0",
     "@commitlint/config-conventional": "19.6.0",
+    "commitizen": "^4.3.1",
     "husky": "^9.1.7"
   },
   "config": {
